--- a/src/njk/_includes/footer.njk
+++ b/src/njk/_includes/footer.njk
@@ -1,6 +1,7 @@
 <footer>
-<p id="legal" class="center-block text-center">
-  <small>&copy; <span class="copyright-year"></span>
-  A class project by First Last.
-</p>
-</footer>
+  <p id="legal" class="center-block text-center">
+    <small>&copy;
+      <span class="copyright-year"></span>
+      A class project by Romi Geller.
+    </p>
+  </footer>
