--- a/src/scss/_jumbotron.scss
+++ b/src/scss/_jumbotron.scss
@@ -7,5 +7,5 @@
 
 .jumbotron {
   margin-bottom: 30px;
-  background-image: src="img/queen-band-early.jpg")
+  background-image: src="img/queen-band-early.jpg";
 }
