--- a/src/njk/discography.njk
+++ b/src/njk/discography.njk
@@ -1,20 +1,26 @@
 {% extends '_templates/base.njk' %}
 
-{% block page_title%}Discography{%endblock%}
+{% block page_title %}Queen{% endblock %}
 
-  {% block content %}
-    <h1>Queen Albums</h1>
-    <p>Queen's FUll Discography</p>
-    <div class="row">
-      {% for albums in queen.discography %}
-        <h5 class="card-title">{{albums.title}}</h5>
-        <h6 class="card-title">{{albums.year}}</h6>
-        <p class="card-image">{{albums.image}}</p>
-        <a href="{{ queen.source }} " target="blank">Source</a>
+{% block page_description %}The discography page.{% endblock %}
+
+{% block content %}
+  <h2>Discography</h2>
+  <p>Here is a collection of Queen's discography.</p>
+  <hr>
+  <div class="row">
+    {% for albums in queen.discography %}
+      <div class="col-sm-6 col-lg-4">
+        <div class="card mb-4 bg-light border-success">
+          <div class="card-body">
+            <h5 class="card title">{{albums.title}}</h5>
+            <h6 class="card-title">{{albums.year}}</h6>
+            <p class="card-image">{{albums.image}}</p>
+            <a href="{{ queen.source }}" target="blank">Source</a>
+          </div>
+        </div>
       </div>
-    </div>
+      <hr>
+    {% endfor %}
   </div>
-{% endfor %}
-</div>
-</article>
-{% endblock%}
+{% endblock %}
