--- a/src/njk/index.njk
+++ b/src/njk/index.njk
@@ -30,7 +30,7 @@
           <h5 class="card title">{{albums.title}}</h5>
           <h6 class="card-title">{{albums.year}}</h6>
           <p class="card-image">{{albums.image}}</p>
-          <a href="{{ queen.source }}" target="blank">Source</a>
+          <a href="discography.html">Source</a>
         </div>
       </div>
     </div>
