--- a/src/njk/_templates/bake-book.njk
+++ b/src/njk/_templates/bake-book.njk
@@ -13,9 +13,7 @@
 {% block content %}
   <article class="container">
     <div class="row">
-      <div class="col-sm-4">
-        <img src="../img/{{ slug }}.jpg" alt="" class="img-fluid mb-4">
-      </div>
+      <div class="col-sm-4"></div>
       <div class="col-sm-8">
         <h1>{{ title }}</h1>
         <p>{{ blurb | safe }}</p>
