--- a/src/njk/discography.njk
+++ b/src/njk/discography.njk
@@ -1,10 +1,12 @@
 {% extends '_templates/base.njk' %}
 
-{% block page_title %}Queen{% endblock %}
+{% block page_title %}Discography{% endblock %}
 
 {% block page_description %}The discography page.{% endblock %}
 
 {% block content %}
+  <title>Discography</title>
+
   <div class="container">
     <h2>Discography</h2>
     <p>Here is a collection of Queen's discography.</p>
