--- a/src/njk/_templates/bake-member.njk
+++ b/src/njk/_templates/bake-member.njk
@@ -1,10 +1,10 @@
 {% extends '_templates/base.njk' %}
 
 {% set relative_path = "../" %}
-
-{% block page_title %}{{ title }}
-{% endblock %}
-
+<title>
+  {% block page_title %}{{ name }}
+  {% endblock %}
+</title>
 {% block page_description %}{{ title }}
   by
   {{ author }}
